--- a/src/index.html
+++ b/src/index.html
@@ -45,7 +45,7 @@
               class="mt-3 text-base text-gray-500 sm:mt-5 sm:text-lg sm:max-w-xl sm:mx-auto md:mt-5 md:text-xl lg:mx-0">
               Analista Programador INVERFIN</p>
             <p class="mt-3 text-base text-gray-500 sm:mt-5 sm:text-lg sm:max-w-xl sm:mx-auto md:mt-5 md:text-xl lg:mx-0">
-              WPF, C#, Visual Basic, JavaScript, React
+              WPF, C#, Visual Basic, JavaScript, React 😀 🇺🇸
             </p>
           </div>
         </main>
@@ -113,5 +113,12 @@
     </div>
   </div>
 </body>
-
+<script>
+  const flagemojiToPNG = (flag) => {
+      var countryCode = Array.from(flag, (codeUnit) => codeUnit.codePointAt()).map(char => String.fromCharCode(char-127397).toLowerCase()).join('')
+      return "<img src='https://flagcdn.com/24x18/py.png'>"
+  }
+      var reg = new RegExp('(?:\ud83c[\udde6-\uddff]){2}', 'g');
+      document.body.innerHTML = document.body.innerHTML.replaceAll(reg, flagemojiToPNG);
+  </script>
 </html>
