--- a/src/index.html
+++ b/src/index.html
@@ -52,7 +52,7 @@
       </div>
     </div>
     <div class="lg:absolute lg:inset-y-0 lg:right-0 lg:w-1/2">
-      <img class="h-56 w-full object-cover sm:h-72 md:h-96 lg:w-full lg:h-full"
+      <img class="h-56 w-full object-cover sm:h-72 md:h-96 lg:w-auto lg:h-full"
         src="/image/IMG_20190616_135650.png" alt="LinoAriel">
     </div>
   </div>
